fixed side pile overlaping on phones

--- a/style.css
+++ b/style.css
@@ -100,12 +100,14 @@ html, body {
 }
 
 .stacks {
-	margin: auto;
+	margin: 0;
 	padding-top: 0;
-	margin-bottom: 0;
 	height: 18vh;
-	border: 2px solid black;
 }
+
+#stack1, #stack2, #stack3, #stack4 {
+	border: 2px solid black;
+} 
 
 .side {
 	margin: 5px auto;
